2007-05-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c (script_fu_browse_response):
	focus the console entry, set the cursor position to the first
	parameter and present the console window.

2007-05-09  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-preview.c
	(gimp_display_shell_draw_tri_row)
	(gimp_display_shell_draw_tri_row_mask): don't call gdk_draw_pixbuf()
	with a zero width. Fixes bug #349483.

2007-05-08  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/xmp-encode.c (gen_property): quick workaround
	for bug #436077.  A better solution will follow later.

2007-05-08  Karine Delvare  <edhel@gimp.org>

	* plug-ins/common/flarefx.c: use the new preview transform function, 
	see bug #356716.

2007-05-08  Karine Delvare  <edhel@gimp.org>

	* plug-ins/common/papertile.c: Replace tile size with width & height,
	without changing the plug-in interface (bug #87092).

2007-05-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptexteditor.c: use GtkWindow::transient-for just
	for the fun of using another GTK+ 2.10 feature.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbaseenums.[ch] (GimpCloneType): changed strings.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpbrushtool.[ch] (gimp_brush_tool_draw): moved
	brush drawing code to the new function gimp_brush_tool_draw_brush().

	* app/tools/gimpsourcetool.c: (gimp_source_tool_draw): draw the
	brush outline at the source position (bug #435545).

2007-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/blur.c (blur_prepare_row): clamp to the first
	row, not the second. Also update the progress less often.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: reduce rounding errors when converting
	between premultiplied and separated alpha. Fixes bug #383870.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/fits/fitsrw.c
	* plug-ins/fits/fits.c: applied modified patch from Peter