@@ -1,5 +1,16 @@
 2007-05-09  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/lcms.c (lcms_icc_apply): improved handling of
+	attached non-RGB profiles.
+
+	* plug-ins/common/oilify.c: use GIMP_RGB_LUMINANCE() instead of
+	the self-made INTENSITY macro.
+
+	* plug-ins/common/tiff-load.c
+	* plug-ins/common/tiff-save.c: reduced number of progress updates.
+
+2007-05-09  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/script-fu-console.c (script_fu_browse_response):
 	focus the console entry, set the cursor position to the first
 	parameter and present the console window.
